--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,18 @@
   font-family: 'Inter', system-ui, sans-serif;
 }
 
+header {
+  border-bottom: 1px solid #eaeaea;
+  svg{
+    margin-right: 15px;
+  }
+
+  h3,
+  p {
+    margin: 0;
+  }
+}
+
 body {
   margin: 0;
   font-family: 'Inter', system-ui, sans-serif;
@@ -26,16 +38,25 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
   z-index: 1;
 
   .drawer {
     position: absolute;
-    width: 385px;
-    height: 100%;
+    width: 420px;
     right: 0;
-    background-color: #FFFFFF;
-    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-    padding: 30px;
+    height: 100%;
+    background: #FFFFFF;
+    box-shadow: -14px 4px 24px rgba(0, 0, 0, 0.1);
+    border-radius: 0 20px 20px 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+  }
+   
+  .items {
+    flex:1;
+    overflow: auto;
   }
 
 
@@ -44,31 +65,123 @@ body {
   }
 }
 
+  .cartItem {
+    border: 1px solid #f3f3f3;
+    border-radius: 20px;
+    overflow: hidden;
+    padding: 20px;
+    
+    .cartItemImg {
+      height: 70px;
+      width: 70px;
+      background-size: contain;
+      background-position: 0 -7px;
+      background-repeat: no-repeat;
+      margin-right: 20px;
+    }
+    
+      p {
+        font-size: 16px;
+        margin: 0;
+      }
+    
+      b{
+        font-size: 15px;
+      }
+    
+      .btnCart {
+        opacity: 0.5;
+        cursor: pointer;
+        transition: opacity 0.2s ease-in-out;
+    
+        &:hover {
+          opacity: 1.25;
+        }
+      }
+    }
+
+  .cartTotalBlock {
+    ul {
+      display: block;
+      margin-bottom: 30px !important;
+
+      li{
+        display: flex;
+        align-items: flex-end;
+        margin-bottom: 20px;
+  
+        div {
+          flex: 1;
+          height: 1px;
+          border-bottom: 1px dashed #dfdfdf ;
+          position: relative;
+          top: -4px;
+          margin: 0 7px;
+        }
+      }
+    }
+    .greenButton {
+      position: relative;
+      
+
+      &:hover {
+        img {
+          transform: translateX(10px);
+          transition: transform 0.2s ease-in-out;
+        }
+      }
+
+      img {
+        position: absolute;
+        right: 40px;
+        top: 20px;
 
 
-header {
-  border-bottom: 1px solid #eaeaea;
-  svg{
-    margin-right: 15px;
+      }
+    }
   }
 
-  h3,
-  p {
+.greenButton {
+    width: 100%;
+    height: 55px;
+    background: #9dd558;
+    border-radius: 18px;
+    border: 0;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.2s ease-in-out;
+
+
+    &:hover {
+      background: lighten($color: #9dd558, $amount: 5%) ;
+    }
+
+    &:active {
+      background: darken($color: #9dd558, $amount: 5%);
+  }
+}
+
+
+
+.content {
+  h1 {
     margin: 0;
   }
 }
 
-.search-block { 
+.search-block {
   border: 1px solid #f3f3f3;
-  border-radius: 10px;
+  border-radius: 13px;
   padding: 0 15px;
+  text-align: center;
 
   input {
-    border:0;
-    padding: 13px;
+    border: 0;
+    padding: 10px;
     font-size: 16px;
     width: 200px;
-
   }
 }
 
@@ -102,39 +215,6 @@ header {
   }
 }
 
-.cartItem {
-border: 1px solid #f3f3f3;
-border-radius: 20px;
-overflow: hidden;
-padding: 20px;
-
-.cartItemImg {
-  height: 70px;
-  width: 70px;
-  background-size: contain;
-  background-position: 0 -7px;
-  background-repeat: no-repeat;
-  margin-right: 20px;
-}
-
-  p {
-    font-size: 16px;
-  }
-
-  b{
-    font-size: 15px;
-  }
-
-  .btnCart {
-    opacity: 0.5;
-    cursor: pointer;
-    transition: opacity 0.2s ease-in-out;
-
-    &:hover {
-      opacity: 1.25;
-    }
-  }
-}
 
 .button {
   background-color: #FFFFFF;
