--- a/src/index.scss
+++ b/src/index.scss
@@ -194,15 +194,19 @@ body {
   border-radius: 40px;
   margin-right: 30px;
   transition: box-shadw 0.2s ease-in-out, transform 0.2s ease-in-out;
-  cursor: pointer;
+  margin-bottom: 30px;
 
   &:hover {
     box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
     transform: translateY(-5px);
   }
 
-  favorite {
+  .favorite {
     position: absolute;
+    cursor: pointer;
+  }
+
+  .plus {
     cursor: pointer;
   }
   
@@ -218,11 +222,4 @@ body {
 }
 
 
-.button {
-  background-color: #FFFFFF;
-  border: 1px solid #f2f2f2;
-  box-sizing: border-box;
-  border-radius: 8px;
-  height: 32px;
-  width: 32px;
-}
+
